--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,374 @@
  *= require_tree .
  *= require_self
  */
+
+/*Fonts*/
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,700,300,600,800,400);
+@import url(http://fonts.googleapis.com/css?family=Raleway:800);
+
+
+div.container{ 
+	background: url("Background.png") center fixed;
+  	-webkit-background-size: cover; 
+  	background-size: cover;}
+
+a{
+	text-decoration : none;
+	color: white;}
+
+div.top{
+	height: 70px; 
+	width:100%;
+	background : #FFFFFF url("icons/Logo_circle.svg") no-repeat center 15px;
+	box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.15);}
+
+/*body.home1*/div.container section{width : 250px; margin : 200px auto;}
+
+/*body.home1*/div.container section p{
+	opacity: 0.89;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 14px;
+	color: #FFFFFF;
+	line-height: 19px;
+	text-shadow: 0px 2px 2px rgba(0,0,0,0.50);
+	text-align: center;
+	margin-bottom : 45px;}
+
+/*body.home1*/div.container  section ul li{float : left;}
+
+/*body.home1*/div.container  section ul li a{
+	font-family : 'Open Sans', sans-serif;
+	font-weight: 300;
+	color : #FFFFFF;
+	font-size: 12px;
+	line-height: 17px;
+	text-decoration: none;
+	background: rgba(0,0,0,0.15);
+	border-radius: 15px;
+	padding : 6px 40px;}
+
+/*body.home1*/div.container  section ul li.buttons a#log{ margin-right : 17px; border: 1px solid #FFFFFF;}
+
+/*body.home1*/div.container  section ul li a#sign{background-image: linear-gradient(-180deg, #EF4847 0%, #9E2720 100%);box-shadow: 0px 1px 1px 0px rgba(0,0,0,0.30);}
+
+
+/*body.home1*/div.container  section ul li.buttons a#log:hover{
+  background: rgba(255,255,255,0.5);
+  cursor: pointer;}
+
+/*body.home1*/div.container  section ul li.buttons a#sign:hover{
+  background-image: linear-gradient(-180deg, #EF4847 100%, #9E2720 0%);
+  cursor: pointer;}
+
+
+/*body.home1*/div.container footer {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 30px;
+  width: 100%;
+  margin: 0 auto;
+  text-align:center;
+  font-family: "Open Sans" sans-serif;
+  font-weight: 300 !important;
+  font-size: 12px !important;
+  color: #FFFFFF;
+  line-height: 17px;
+  text-shadow: 0px 1px 2px rgba(0,0,0,0.50);}
+
+/*body.home1*/div.container footer span{
+  font-weight: 600;
+  text-transform: uppercase;}
+
+/*body.home1*/div.container footer a{
+  margin-bottom:4px;
+  text-decoration: underline;}
+
+/* HOMEPAGE USER*/
+body.homepage{
+	background-color: #F6F6F6;
+}
+
+nav ul li{
+	background-image: -webkit-linear-gradient(0deg, #D23F36 0%, #F04848 100%);
+	background-image: -o-linear-gradient(0deg, #D23F36 0%, #F04848 100%);
+	background-image: linear-gradient(0deg, #D23F36 0%, #F04848 100%);
+	float:left;
+	height : 70px;}
+
+nav ul li a img{
+	padding : 22px 30px;
+	height : 25px;
+	vertical-align: middle;}
+
+	nav ul li a img:hover{
+		background: linear-gradient(-180deg, #AF342D 3%, #BD3837 100%);
+		box-shadow: inset 0px 1px 2px 0px rgba(0,0,0,0.25);
+	  	cursor: pointer;}
+
+nav ul li.right{
+	float : right;}
+
+nav ul li.right input{
+	width :265px;
+	height : 64px;}
+
+aside.user{
+	width : 288px;
+	background-image: -webkit-linear-gradient(#414345 0%, #232526 100%);
+	background-image: -o-linear-gradient(#414345 0%, #232526 100%);
+	background-image: linear-gradient(#414345 0%, #232526 100%);
+	padding : 43px 20px 50px 40px;
+	float:left;}
+
+	aside.user img{
+		float : left;
+		margin-right : 15px;}
+
+	aside.user h2{
+		font-family : 'Open Sans';
+		font-size : 15px;
+		color : #FFFFFF;
+		line-height : 20px;
+		margin-top: 5px;}
+
+		aside.user h2 span{
+			font-weight : 600;}
+
+	aside.user p.username{
+		opacity: 0.5;
+		font-family: 'Open Sans';
+		font-size: 13px;
+		color: #FFFFFF;
+		line-height: 18px;
+		font-weight:400;
+		font-style :italic;
+		margin-bottom :30px;}
+
+	aside.user ul li{
+		display :inline-block;
+		margin-right :35px;}
+
+
+		/* PAGE USER */
+		aside.user.profile ul li:nth-child(1){
+			margin-left : 25px;
+		}
+		/* FIN PAGE USER */
+
+	aside.user span.indicator{
+		opacity: 0.8;
+		font-family: 'Open Sans';
+		font-size: 11px;
+		color: #FFFFFF;
+		line-height: 15px;
+		font-weight:600;
+		margin-top :20px;
+		font-weight : 400;
+		text-transform: uppercase;}
+
+
+	aside.user span.count{
+		font-family: 'Open Sans';
+		font-weight: 800;
+		font-size: 20px;
+		color: #EC4746;
+		line-height: 27px;}
+
+/* HOMEPAGE CENTER */
+body.homepage section{
+	float : left;
+}
+
+body.homepage section div.post{
+	background: #FFFFFF url('icons/icon_pen2.svg') no-repeat 35px 40px;
+	box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.15);
+	font-family: 'Open Sans';
+	font-weight: 300;
+	font-size: 15px;
+	color: rgba(179,186,193,0.50);
+	line-height: 20px;
+	height: 100px;
+	width: 700px;
+	margin : 30px 30px 60px 30px;}
+
+	body.homepage section div.post p{
+		margin-left:100px;
+		padding-top :38px;}
+
+body.homepage section div.feed{
+	background: #FFFFFF;
+	box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.15);
+	height:100%;
+	margin : -30px 30px 30px 30px;
+	width :620px;
+	padding:70px 40px;}
+
+	body.homepage section div.feed span.letters{
+		font-family: 'Raleway';
+		color:#fff;
+		padding : 20px;
+		background: #D8D8D8;
+		font-size: 12px;
+		letter-spacing: 2px;
+		line-height: 14px;
+		float:left;
+		margin-right:40px;
+		margin-bottom:40px;}
+
+	body.homepage section div.feed p.text,body.homepage section div.feed span.author, body.homepage section div.feed span.date{
+		font-family: 'Open Sans';
+		font-size: 12px;
+		color: #9B9B9B;
+		line-height: 20px;
+		font-weight:300;
+		width:600px;
+		margin-bottom : 15px;
+	}
+
+		body.homepage section div.feed span.hashtag{
+			color:#EC4746;
+			font-weight :600;
+		}
+
+		body.homepage section div.feed span.author, body.homepage section div.feed span.date{
+			font-weight : 600;
+			padding-top : 30px;
+		}
+
+	body.homepage section div.feed ul{
+		float:right;
+	}
+		body.homepage section div.feed ul li{
+			float :left;
+			padding-right:30px;
+		}
+	
+
+aside.right_side{
+	width:336px;
+	position : absolute;
+	right : 0;
+	border-left : 1px ;
+	padding-left :20px;
+	background-color: #FFFFFF;
+	box-shadow: 0px 1px 5px 1px rgba(0,0,0,0.15);
+}
+
+	aside.right_side h3{
+		font-family: 'Open Sans';
+		font-weight:400;
+		font-size: 11px;
+		color: #B4BBC2;
+		line-height: 15px;
+		text-transform : uppercase;
+		padding-top :35px;
+		margin-bottom:20px;
+	}
+
+	aside.right_side li.trending{
+		font-family: 'Open Sans';
+		font-size: 12px;
+		color: #EC4746;
+		line-height: 17px;
+		font-weight: 300;
+		margin-bottom:5px;}
+
+
+aside.right_side ul li.wtf{
+	display : block;
+	height : 40px;
+	margin-bottom : 15px;}
+
+aside.right_side ul li img{
+	float : left;
+	margin-right : 20px;}
+
+	aside.right_side ul li p{
+		font-family: 'Open Sans';
+		font-size: 12px;
+		color: #545454;
+		line-height: 17px;
+		float : left;}
+
+	aside.right_side ul li span.pseudo{
+		color : #B9B9B9;
+		}
+
+	aside.right_side ul li a{
+		/*float : right;*/
+		font-family: 'Open Sans';
+		font-size: 11px;
+		color: #EC4746;
+		letter-spacing: 0.45px;
+		line-height: 15px;
+		font-weight: 600;
+		text-transform: uppercase;
+		padding: 5px 10px 5px 23px;
+		border: 1px solid #EC4746;
+		border-radius: 3px;
+		background :#FFFFFF url('../images/icons/icon_add.svg') no-repeat 5px 6px;
+		position:absolute;
+		margin-top : 4px;
+		margin-left : 35px;}
+
+/** PROFILE **/
+aside.user.profile{
+	text-align:center;
+	width:308px;
+	padding : 43px 20px 50px 20px;
+}
+
+aside.user.profile img{
+	float :none;
+	margin-bottom : 27px;
+	width : 80px;
+	height : 80px;
+	}
+
+aside.user.profile span.line_under_username{
+	padding: 0 30px;
+	border-bottom : 1px #FFF solid;
+	margin-bottom : 10px;
+}
+
+aside.user.profile p.username{
+	margin-bottom : 0;
+}
+
+aside.user.profile p.description{
+	padding : 10px 0 40px;
+	opacity: 0.8;
+	font-family: 'Open Sans';
+	font-size: 12px;
+	color: #FFFFFF;
+	line-height: 18px;
+	font-weight : 300;
+}
+	
+	aside.user.profile p.description span.bolder{
+		font-weight : 600;
+	}
+
+aside.user.profile ul{
+	margin-bottom : 40px;
+}
+
+aside.user.profile a.side_profile_follow{
+	background: rgba(255,255,255,0.20);
+	box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.10);
+	border-radius: 40px;
+	font-family: 'Open Sans';
+	font-weight : 600;
+	text-transform: uppercase;
+	font-size: 10px;
+	color: #FFFFFF;
+	letter-spacing: 2px;
+	line-height: 14px;
+	padding : 13px 32px;
+	}
+
+	aside.user.profile a.side_profile_follow:hover{
+		cursor: pointer;
+		background: rgba(255,255,255,0.60);
+	}
