--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Profile</h1>
+<h2>Profile page</h2>
 <p>
 	<b>Happername </b> <%= @happer.happername %> <br />
 	<b>Full name </b> <%= @happer.full_name %> <br />
@@ -6,4 +6,5 @@
 	<b>Connections</b> <%= @happer.sign_in_count %><br />
 	<b>Joined</b> <%= @happer.created_at %>
 </p>
+<a href="../edit">Account settings</a>
 <a href="http://localhost:3000/">Home</a>
