--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Profile</h1>
+<!-- <h1>Profile</h1>
 <p>
 	<b>Happername </b> <%= @happer.happername %> <br />
 	<b>Full name </b> <%= @happer.full_name %> <br />
@@ -6,4 +6,114 @@
 	<b>Connections</b> <%= @happer.sign_in_count %><br />
 	<b>Joined</b> <%= @happer.created_at %>
 </p>
-<a href="http://localhost:3000/">Home</a>
+<a href="http://localhost:3000/">Home</a> -->
+<div class="homepage">
+	<header>
+		<nav class="top">
+			<ul>
+				<li><a href="homepage.html"><!-- <img src="../assets/images/icons/House.svg" alt="Home"> --><%= image_tag("icons/House.svg")%></a></li>
+				<li><a href="#"><!-- <img src="icons/user.svg" alt="User"> --><%= image_tag("icons/user.svg")%></a></li>
+				<li><a href="#"><!-- <img src="icons/message.svg" alt="Message"> --><%= image_tag("icons/message.svg")%></a></li>
+				<li><a href="#"><!-- <img src="icons/bullhorn.svg" alt="Bullhorn"> --><%= image_tag("icons/bullhorn.svg")%></a></li>
+				<li class="right"><a href="#"><!-- <img src="icons/Icon_pen.svg" alt=""> --><%= image_tag("icons/Icon_pen.svg")%></a></li>
+				<li class="right input"><input type="text"></li>
+			</ul>
+		</nav>
+		<div class="top"></div>
+	</header>
+	<aside class="user profile">
+		<div class="profile_content">
+			<!-- <img src="../assets/images/picture.png" alt=""/> --><%= image_tag("picture.png")%>
+			<h2>Arthur <span>GUILLERMINHZN</span></h2>
+			<p class="username">@dimitrifrompari</p>
+			<span class="line_under_username">&nbsp;</span>
+			<p class="description">Digital designer | Creative Artworker<br/>Je fais aussi du freelance, et j’ai un site internet :<br/><span class="bolder">www.arthurguillerminhazan.fr</span></p>
+			<ul>
+				<li><span class="indicator">Tweets</span><br/><span class="count">548</span></li>
+				<li><span class="indicator">Following</span><br/><span class="count">380</span></li>
+				<li><span class="indicator">Followers</span><br/><span class="count">789</span></li> 
+			</ul>
+			<a href="#" class="side_profile_follow">Follow</a>
+		</div>
+	</aside>
+
+	<section>
+		<div class="post">
+			<p>What's happening?</p>
+		</div>
+		<div class="feed">
+			<span class="letters">AG</span>
+			<p class="text">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Nullam quis risus eget urna mollis ornare vel eu leo. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.<span class="hashtag">#DIY</span></p>
+			<span class="author">@dimitrifrompari |</span><span class="date"> 26.12.2014</span>
+			<ul>
+				<li><a href="#"><img src="icons/respond.svg" alt="Answer"></a></li>
+				<li><a href="#"><img src="icons/retweet.svg" alt="RT"></a></li>
+				<li><a href="#"><img src="icons/like.svg" alt="Like"></a></li>
+			</ul>
+		</div>
+		<div class="feed">
+			<span class="letters">AG</span>
+			<p class="text">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Nullam quis risus eget urna mollis ornare vel eu leo. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.<span class="hashtag">#DIY</span></p>
+			<span class="author">@dimitrifrompari |</span><span class="date"> 26.12.2014</span>
+			<ul>
+				<li><a href="#"><img src="icons/respond.svg" alt="Answer"></a></li>
+				<li><a href="#"><img src="icons/retweet.svg" alt="RT"></a></li>
+				<li><a href="#"><img src="images/icons/like.svg" alt="Like"></a></li>
+			</ul>
+		</div>
+	</section>
+
+	<aside class="right_side">
+		<article>
+			<h3>Trending topic</h3>
+			<ul>
+				<li class="trending">#LucasFPD</li>
+				<li class="trending">#ManuVelma</li>
+				<li class="trending">#ArthurPasDrole</li>
+				<li class="trending">#GrosBabache</li>
+				<li class="trending">#HeleneBonhomme</li>
+			</ul>
+		</article>
+		<article>
+			<h3>Who to follow ?</h3>
+			<ul>
+				<li class="wtf">
+					<img src="../assets/images/photo_tweet.svg" alt="">
+					<p>La Quadrature du Net<br/>
+					<span class="pseudo">@laquadrature</span></p>
+					<a href="#">Follow</a>
+				</li>
+				<li class="wtf">
+					<img src="../assets/images/photo_tweet.svg" alt="">
+					<p>La Quadrature du Net<br/>
+					<span class="pseudo">@laquadrature</span></p>
+					<a href="#">Follow</a>
+				</li>
+				<li class="wtf">
+					<img src="../assets/images/photo_tweet.svg" alt="">
+					<p>La Quadrature du Net<br/>
+					<span class="pseudo">@laquadrature</span></p>
+					<a href="#">Follow</a>
+				</li>
+				<li class="wtf">
+					<img src="../assets/images/photo_tweet.svg" alt="">
+					<p>La Quadrature du Net<br/>
+					<span class="pseudo">@laquadrature</span></p>
+					<a href="#">Follow</a>
+				</li>
+				<li class="wtf">
+					<img src="../assets/images/photo_tweet.svg" alt="">
+					<p>La Quadrature du Net<br/>
+					<span class="pseudo">@laquadrature</span></p>
+					<a href="#">Follow</a>
+				</li>
+				<li class="wtf">
+					<img src="../assets/images/photo_tweet.svg" alt="">
+					<p>La Quadrature du Net<br/>
+					<span class="pseudo">@laquadrature</span></p>
+					<a href="#">Follow</a>
+				</li>
+			</ul>
+		</article>
+	</aside>
+</div>
