--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -46,9 +46,9 @@
 			<p class="text">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Nullam quis risus eget urna mollis ornare vel eu leo. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.<span class="hashtag">#DIY</span></p>
 			<span class="author">@dimitrifrompari |</span><span class="date"> 26.12.2014</span>
 			<ul>
-				<li><a href="#"><img src="icons/respond.svg" alt="Answer"></a></li>
-				<li><a href="#"><img src="icons/retweet.svg" alt="RT"></a></li>
-				<li><a href="#"><img src="icons/like.svg" alt="Like"></a></li>
+				<li><a href="#"><!-- <img src="icons/respond.svg" alt="Answer"> --><%= image_tag("icons/respond.svg")%></a></li>
+				<li><a href="#"><!-- <img src="icons/retweet.svg" alt="RT"> --><%= image_tag("icons/retweet.svg")%></a></li>
+				<li><a href="#"><!-- <img src="icons/like.svg" alt="Like"> --><%= image_tag("icons/like.svg")%></a></li>
 			</ul>
 		</div>
 		<div class="feed">
@@ -56,11 +56,22 @@
 			<p class="text">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Nullam quis risus eget urna mollis ornare vel eu leo. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.<span class="hashtag">#DIY</span></p>
 			<span class="author">@dimitrifrompari |</span><span class="date"> 26.12.2014</span>
 			<ul>
-				<li><a href="#"><img src="icons/respond.svg" alt="Answer"></a></li>
-				<li><a href="#"><img src="icons/retweet.svg" alt="RT"></a></li>
-				<li><a href="#"><img src="images/icons/like.svg" alt="Like"></a></li>
+				<li><a href="#"><!-- <img src="icons/respond.svg" alt="Answer"> --><%= image_tag("icons/respond.svg")%></a></li>
+				<li><a href="#"><!-- <img src="icons/retweet.svg" alt="RT"> --><%= image_tag("icons/retweet.svg")%></a></li>
+				<li><a href="#"><!-- <img src="icons/like.svg" alt="Like"> --><%= image_tag("icons/like.svg")%></a></li>
 			</ul>
 		</div>
+		<div class="feed">
+			<span class="letters">AG</span>
+			<p class="text">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Nullam quis risus eget urna mollis ornare vel eu leo. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.<span class="hashtag">#DIY</span></p>
+			<span class="author">@dimitrifrompari |</span><span class="date"> 26.12.2014</span>
+			<ul>
+				<li><a href="#"><!-- <img src="icons/respond.svg" alt="Answer"> --><%= image_tag("icons/respond.svg")%></a></li>
+				<li><a href="#"><!-- <img src="icons/retweet.svg" alt="RT"> --><%= image_tag("icons/retweet.svg")%></a></li>
+				<li><a href="#"><!-- <img src="icons/like.svg" alt="Like"> --><%= image_tag("icons/like.svg")%></a></li>
+			</ul>
+		</div>
+		
 	</section>
 
 	<aside class="right_side">
@@ -78,37 +89,43 @@
 			<h3>Who to follow ?</h3>
 			<ul>
 				<li class="wtf">
-					<img src="../assets/images/photo_tweet.svg" alt="">
+					<!-- <img src="../assets/images/photo_tweet.svg" alt=""> -->
+					<%= image_tag("Photo_tweet.svg")%>
 					<p>La Quadrature du Net<br/>
 					<span class="pseudo">@laquadrature</span></p>
 					<a href="#">Follow</a>
 				</li>
 				<li class="wtf">
-					<img src="../assets/images/photo_tweet.svg" alt="">
+					<!-- <img src="../assets/images/photo_tweet.svg" alt=""> -->
+					<%= image_tag("Photo_tweet.svg")%>
 					<p>La Quadrature du Net<br/>
 					<span class="pseudo">@laquadrature</span></p>
 					<a href="#">Follow</a>
 				</li>
 				<li class="wtf">
-					<img src="../assets/images/photo_tweet.svg" alt="">
+					<!-- <img src="../assets/images/photo_tweet.svg" alt=""> -->
+					<%= image_tag("Photo_tweet.svg")%>
 					<p>La Quadrature du Net<br/>
 					<span class="pseudo">@laquadrature</span></p>
 					<a href="#">Follow</a>
 				</li>
 				<li class="wtf">
-					<img src="../assets/images/photo_tweet.svg" alt="">
+					<!-- <img src="../assets/images/photo_tweet.svg" alt=""> -->
+					<%= image_tag("Photo_tweet.svg")%>
 					<p>La Quadrature du Net<br/>
 					<span class="pseudo">@laquadrature</span></p>
 					<a href="#">Follow</a>
 				</li>
 				<li class="wtf">
-					<img src="../assets/images/photo_tweet.svg" alt="">
+					<!-- <img src="../assets/images/photo_tweet.svg" alt=""> -->
+					<%= image_tag("Photo_tweet.svg")%>
 					<p>La Quadrature du Net<br/>
 					<span class="pseudo">@laquadrature</span></p>
 					<a href="#">Follow</a>
 				</li>
 				<li class="wtf">
-					<img src="../assets/images/photo_tweet.svg" alt="">
+					<!-- <img src="../assets/images/photo_tweet.svg" alt=""> -->
+					<%= image_tag("Photo_tweet.svg")%>
 					<p>La Quadrature du Net<br/>
 					<span class="pseudo">@laquadrature</span></p>
 					<a href="#">Follow</a>
