--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -126,8 +126,18 @@ nav ul li.right{
 	float : right;}
 
 nav ul li.right input{
-	width :265px;
-	height : 64px;}
+	width : 215px;
+	height : 64px;
+	background : #FFFFFF url('icons/Arrow.svg') no-repeat 20px 26px;
+	background-size : 13px 15px;
+	font-family: 'Open Sans';
+	font-size: 15px;
+	font-weight : 800;
+	text-transform: uppercase;
+	color: #B4BBC2;
+	line-height: 20px;
+	padding-left : 50px;}
+
 
 aside.user{
 	width : 288px;
