--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -35,6 +35,17 @@
 			</ul>
 			<a href="#" class="side_profile_follow">Follow</a>
 		</div>
+		<ul class="gallery">
+			<li><%= image_tag("Photo_01.png")%></li>
+			<li><%= image_tag("Photo_01.png")%></li>
+			<li><%= image_tag("Photo_01.png")%></li>
+			<li><%= image_tag("Photo_01.png")%></li>
+			<li><%= image_tag("Photo_01.png")%></li>
+			<li><%= image_tag("Photo_01.png")%></li>
+			<li><%= image_tag("Photo_01.png")%></li>
+			<li><%= image_tag("Photo_01.png")%></li>
+			<li><%= image_tag("Photo_01.png")%></li>
+		</ul>
 	</aside>
 
 	<section>
