--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -143,10 +143,14 @@ nav ul li.right input{
 aside.user{
 	width : 288px;
 	padding-bottom : 100%;
-	background-image: -webkit-linear-gradient(#414345 0%, #232526 100%);
+	/*background-image: -webkit-linear-gradient(#414345 0%, #232526 100%);
 	background-image: -o-linear-gradient(#414345 0%, #232526 100%);
-	background-image: linear-gradient(#414345 0%, #232526 100%);
+	background-image: linear-gradient(#414345 0%, #232526 100%);*/
 	/*padding : 43px 20px 50px 40px;*/
+	background: url("Background.png") center fixed;
+  	-webkit-background-size: cover; 
+  	background-size: cover;
+  	height:100%;
 	float:left;}
 
 aside.user div.profile_content{
