--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,7 +16,7 @@
 				<li><a href="#"><!-- <img src="icons/message.svg" alt="Message"> --><%= image_tag("icons/message.svg")%></a></li>
 				<li><a href="#"><!-- <img src="icons/bullhorn.svg" alt="Bullhorn"> --><%= image_tag("icons/bullhorn.svg")%></a></li>
 				<li class="right"><a href="#"><!-- <img src="icons/Icon_pen.svg" alt=""> --><%= image_tag("icons/Icon_pen.svg")%></a></li>
-				<li class="right input"><input type="text"></li>
+				<li class="right input"><input type="text" placeholder="search"></li>
 			</ul>
 		</nav>
 		<div class="top"></div>
