--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,15 +1,21 @@
 <div class="container">
-	<h1>Welcome on HAPP</h1>
-	<p>New user ? <a href="users/sign_up">Create an account</a><br /></p>	
+	<h1>Welcome on HAPP</h1>	
 
 	<% if user_signed_in? %>
-  <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>  <br />
-  <a href="users/edit">Account settings</a>      
-<% else %>
-   <p>Already an account ? <%= link_to('Login', new_user_session_path)  %> </p> 
-<% end %>
-<br/>
-<a href="posts/new">Write a Happ</a>
+	<h3>You are logged as <%= current_user.happername %></h3>
+
+	<%= link_to('Logout', destroy_user_session_path, :method => :delete) %>  <br />
+
+	<a href="users/edit">Account settings</a>
+
+	<h3><a href="posts/new">Write a Happ</a></h3>   
+
+	<% else %>
+
+	<p>New user ? <a href="users/sign_up">Create an account</a><br /></p>
+	<p>Already an account ? <%= link_to('Login', new_user_session_path)  %> </p> 
+	<% end %>
+	<br/>
 
 
 <h3>Early adopters</h3>
@@ -17,8 +23,7 @@
 	<% @Happers.each do |happer| %>
 	<li>
 		<a href="users/show/<%= happer.id%>">
-		#<%= happer.id %>
-		- <%= happer.email %>
+		<%= happer.happername %>
 	</a>
 	</li>
 	<% end %>
@@ -27,7 +32,11 @@
 <h3>Happs</h3>
 <ul>
 	<% @Happs.each do |happ| %>
-	<li><%= happ.email %> said <b><%= happ.text %></b></li>
+	<li>
+		<a href="posts/<%=happ.id%>">
+			#<%= happ.id %> <%= happ.user.happername %> <b> said </b><%= happ.text %>
+		</a>
+	</li>
 	<% end %>
 </ul>
 
