--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,2 +1,4 @@
 <h1>Happ</h1>
-<p>Find me in app/views/posts/show.html.erb</p>
+<p>single post show</p>
+
+<li>#<%= @happ.id %> <%= @happ.user.happername %> <b> posted </b><%= @happ.text %></li>
