--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,7 +1,14 @@
 <h3>Write your Happ</h3>
 
-<%= form_for @happ, url: {action: "new"} do |f| %>
-  <%= f.label :Message %> : <%= f.text_area :text %> <br/>
-  <%= f.label :Happer %> :<%= f.select :user, options_from_collection_for_select(@users, "id", "email"), :prompt => "Happer" %><br/>
-  <%= f.submit "Create" %>
+<b> you are <%= @logged.happername %><b>
+
+<%= form_for :post, url: posts_path do |f| %>
+  <p>
+    <%= f.label :text %><br>
+    <%= f.text_field :text %>
+  </p>
+
+  <p>
+    <%= f.submit %>
+  </p>
 <% end %>
