--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,14 +1,20 @@
 <h3>Write your Happ</h3>
 
-<b> you are <%= @logged.happername %><b>
+<% if user_signed_in? %>
 
-<%= form_for :post, url: posts_path do |f| %>
-  <p>
-    <%= f.label :text %><br>
-    <%= f.text_field :text %>
-  </p>
+	<b> you are <%= @logged.happername %><b>
 
-  <p>
-    <%= f.submit %>
-  </p>
+	<%= form_for :post, url: posts_path do |f| %>
+	  <p>
+	    <%= f.label :text %><br>
+	    <%= f.text_field :text %>
+	  </p>
+
+	  <p>
+	    <%= f.submit %>
+	  </p>
+	<% end %>
+
+<% else %>
+	<p> You need to <%= link_to('login', new_user_session_path)  %>.<p>
 <% end %>
