--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,8 +3,27 @@
 	<b>Happername </b> <%= @happer.happername %> <br />
 	<b>Full name </b> <%= @happer.full_name %> <br />
 	<b>E-mail </b> <%= @happer.email %> <br />
-	<b>Connections</b> <%= @happer.sign_in_count %><br />
-	<b>Joined</b> <%= @happer.created_at %>
+	<!--<b>Connections</b> <%= @happer.sign_in_count %><br />
+	<b>Joined</b> <%= @happer.created_at %><br />-->
+	
+
+	<h2>Happs de <%= @happer.happername %></h2>
+
+<ul>
+	<%	@happs.each do |happ|%>
+	<li>
+		<%= happ.text %> <br/>
+		<a href="../../posts/<%= happ.id %>">#<%= happ.id %></a> <%= happ.created_at %>
+		<% if user_signed_in? && happ.user_id == current_user.id %>
+			<%= link_to('Delete', post_delete_path(happ.id)) %>
+		<% end %>
+		<br/>
+		<i><%= happ.user.happername %></i>
+	</li>
+	<br />
+	<% end %>
+</ul>
+
 </p>
 <a href="../edit">Account settings</a>
 <a href="http://localhost:3000/">Home</a>
