--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -30,7 +30,7 @@
   <%= render 'shared/stats' %>
 </section>
 
-<%= render 'follow_form' if user_signed_in? %>
+<%= render 'follow_form' if user_signed_in? && @happer.id != current_user.id %>
 
 <a href="../edit">Account settings</a>
 <a href="http://localhost:3000/">Home</a>
