--- a/app/views/shared/_stats.html.erb
+++ b/app/views/shared/_stats.html.erb
@@ -1,16 +1,9 @@
 <% @user ||= current_user %>
-
-<div class="stats">
-  <a href="<%= following_user_path(@user) %>">
-    <strong id="following" class="stat">
-      <%= @user.following.count %>
-    </strong>
-    following
-  </a>
-  <a href="<%= followers_user_path(@user) %>">
-    <strong id="followers" class="stat">
-      <%= @user.followers.count %>
-    </strong>
-    followers
-  </a>
-</div>
+<li>
+  <span class="indicator">Following</span><br/>
+  <span class="count"><%= @user.following.count %></span>
+</li>
+<li>
+  <span class="indicator">Followers</span><br/>
+  <span class="count"><%= @user.followers.count %></span>
+</li> 
