--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,11 +2,11 @@
 <p>single post show</p>
 <ul>
 	<li>
-		<%= @happ.text %> <br/>
-		<a href="../../posts/<%= @happ.id %>">#<%= @happ.id %></a> <%= @happ.created_at %>
-		<% if user_signed_in? && @happ.user_id == current_user.id %>
-		<%= link_to('Delete', post_delete_path(@happ.id)) %><br/>
-		<i><%= @happ.user.happername %></i>
+		<%= @post.text %> <br/>
+		<a href="../../posts/<%= @post.id %>">#<%= @post.id %></a> <%= @post.created_at %>
+		<% if user_signed_in? && @post.user_id == current_user.id %>
+		<%= link_to('Delete', post_delete_path(@post.id)) %><br/>
+		<i><%= @post.user.happername %></i>
 	</li>
 	<% end %>
 </ul>
