--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,76 +1,119 @@
 
-<div class="container">
-	<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-	<!-- <div class="top"></div> -->
-	
-	<!-- <section>
-		<h1><%= image_tag("icons/Logo_HAPP.svg")%></h1>
-		<p>Instant short messaging from space and above</p>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Happ</title>
+	<link data-turbolinks-track="true" href="/assets/posts.css?body=1" media="all" rel="stylesheet" />
+	<link data-turbolinks-track="true" href="/assets/relationships.css?body=1" media="all" rel="stylesheet" />
+	<link data-turbolinks-track="true" href="/assets/reset-min.css?body=1" media="all" rel="stylesheet" />
+	<link data-turbolinks-track="true" href="/assets/application.css?body=1" media="all" rel="stylesheet" />
+	<script data-turbolinks-track="true" src="/assets/jquery.js?body=1"></script>
+	<script data-turbolinks-track="true" src="/assets/jquery_ujs.js?body=1"></script>
+	<script data-turbolinks-track="true" src="/assets/turbolinks.js?body=1"></script>
+	<script data-turbolinks-track="true" src="/assets/posts.js?body=1"></script>
+	<script data-turbolinks-track="true" src="/assets/relationships.js?body=1"></script>
+	<script data-turbolinks-track="true" src="/assets/application.js?body=1"></script>
+	<meta content="authenticity_token" name="csrf-param" />
+	<meta content="Q4U78Ppo3Auho7eqovTlH67g3Lys2QsjePlMMV0Hs0A=" name="csrf-token" />
 
-			<ul>
-				<li class="buttons">
-					<a href="users/sign_in" id="log">Log in</a>
-				</li>
-				<li class="buttons">
-					<a href="users/sign_up" id="sign">Sign in</a>
-				</li>
-			</ul>
+	<p class="notice"></p>
+	<p class="alert"></p>
+</head>
+<body>
+	<div class="homepage">
+		<header>
+			<nav class="top">
+				<ul>
+					<li><%= link_to(image_tag("icons/House.svg"), root_path) %></li>
+					<li><%= link_to(image_tag("icons/user.svg"), show_user_path(current_user.id)) %></li>
+					<li><%= link_to(image_tag("icons/message.svg"), edit_user_registration_path) %></li>
+					<li><%= link_to(image_tag("icons/bullhorn.svg"), destroy_user_session_path) %></li>
+					<li class="right"><a href="#"><!-- <img src="icons/Icon_pen.svg" alt=""> --><%= image_tag("icons/Icon_pen.svg")%></a></li>
+					<li class="right input"><input type="text" placeholder="search"></li>
+				</ul>
+			</nav>
+			<div class="top"></div>
+		</header>
+		<aside class="user profile">
+			<div class="profile_content">
+				<!-- <img src="../assets/images/picture.png" alt=""/> --><%= image_tag("picture.png")%>
+				<h2><span><%= @user.full_name %></span></h2>
+				<p class="username">@<%= @user.happername %></p>
+				<span class="line_under_username">&nbsp;</span>
+				<p class="description">Digital designer | Creative Artworker<br/>Je fais aussi du freelance, et j’ai un site internet :<br/><span class="bolder">www.arthurguillerminhazan.fr</span></p>
+				<ul>
+					<li><span class="indicator">Happs</span><br/><span class="count"> <%= @user.posts.count %> </span></li>
+					<li><span class="indicator">Following</span><br/><span class="count">380</span></li>
+					<li><span class="indicator">Followers</span><br/><span class="count">789</span></li> 
+				</ul>
+				<% if current_user != @user %>
+				<a href="" class="side_profile_follow">Follow</a>
+				<% end %>
+			</div>
 
-			<a <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>>Logout</a>
+		</aside>
+
+		<section>
+			<div class="post">
+				<p>What's happening?</p>
+			</div>
+
+			<%	@posts.each do |happ|%>
+				<div class="feed">
+					<span class="letters">AG</span>
+					<p class="text"><%= happ.text %> </p>
+					<span class="author"><%=happ.user.happername %> |</span><span class="date"> <%= happ.created_at %></span>
+					<ul>
+						<li><a href="#"><!-- <img src="icons/respond.svg" alt="Answer"> --><%= image_tag("icons/respond.svg")%></a></li>
+						<li><a href="#"><!-- <img src="icons/retweet.svg" alt="RT"> --><%= image_tag("icons/retweet.svg")%></a></li>
+						<li><a href="#"><!-- <img src="icons/like.svg" alt="Like"> --><%= image_tag("icons/like.svg")%></a></li>
+					</ul>
+				</div>
+			<% end %>
+
 		</section>
-	<footer class="home1">
-		<p>Made with love by <a href="#">Arthur <span>Guillermin hazan</span></a> & <a href="#">Helen <span>Pruvot</span></a></p>
-	</footer> -->
 
-	<% if user_signed_in? %>
+		<aside class="right_side">
+			<article>
+				<h3>Trending topic</h3>
+				<ul>
+					<li class="trending">#LucasFPD</li>
+					<li class="trending">#ManuVelma</li>
+					<li class="trending">#ArthurPasDrole</li>
+					<li class="trending">#GrosBabache</li>
+					<li class="trending">#HeleneBonhomme</li>
+				</ul>
+			</article>
+			<article>
+				<h3>Who to follow ?</h3>
+				<ul>
+					<% @users.each do |user| %>
+						<li class="wtf">
+							<%= image_tag("Photo_tweet.svg")%>
+							<p><%= user.full_name %><br/>
+								<span class="pseudo">@<%= user.happername %></span></p>
+								<%= link_to("Follow", show_user_path(user.id))%>
+						</li>
+					<% end %>
+				</ul>
+				</article>
+				<% if user_signed_in? %>
 
-	<% if @user ||= current_user %>
+					<% if @user ||= current_user %>
+						<%= render 'shared/stats' %>
+					<% end %>
 
-	<%= render 'shared/stats' %>
+				<h3><a href="posts/new">Write a Happ</a></h3>   
+
+				<% end %>
+
+			</div>
+		</aside>
+	</div>
 
 
-<% end %>
 
-	<h3>You are logged as <%= current_user.happername %></h3>
 
-	<%= link_to('Logout', destroy_user_session_path, :method => :delete) %>  <br />
 
-	<%= link_to('Account settings', edit_user_registration_path) %>  <br />
 
-	<h3><a href="posts/new">Write a Happ</a></h3>   
-
-	<% else %>
-
-	<p>New user ? <%= link_to("Create an account", new_user_registration_path) %><br /></p>
-	<p>Already an account ? <%= link_to('Login', new_user_session_path)  %> </p> 
-	<% end %>
-	<br/>
-
-	<h3>Happs</h3>
-<ul>
-	<%	@Happs.each do |happ|%>
-	<li>
-		<i><%= link_to(happ.user.happername, show_user_path(happ.user_id)) %></i> said <%= happ.text %> <br/>
-		<a href="../../posts/<%= happ.id %>">#<%= happ.id %></a> <%= happ.created_at %>
-		<% if user_signed_in? && happ.user_id == current_user.id %>
-			<%= link_to('Delete', post_delete_path(happ.id)) %>
-		<% end %>
-	</li>
-	<br />
-	<% end %>
-</ul>
-
-<h3>Early adopters</h3>
-	<ul>
-		<% @Happers.each do |happer| %>
-
-			   <a href="users/show/<%= happer.id%>"> <%= happer.happername %> </a>   -
-		<% end %>
-	</ul>
-
-</div>
-
-	
-
-</div>
 
