--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -27,9 +27,7 @@
 					<% end %>
 				<% end %>
 			</ul>
-			<% if current_user != @user %>
-			<a href="" class="side_profile_follow">Follow</a>
-			<% end %>
+			<%= render 'follow_form' if user_signed_in? && @user.id != current_user.id %>
 		</div>
 		<ul class="gallery">
 			<li><%= image_tag("Photo_01.png")%></li>
