--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -26,13 +25,13 @@
 				<ul>
 					<li><%= link_to(image_tag("icons/House.svg"), root_path) %></li>
 					<li><%= link_to(image_tag("icons/user.svg"), show_user_path(current_user.id)) %></li>
-					<li><%= link_to(image_tag("icons/message.svg"), edit_user_registration_path) %></li>
-					<li><%= link_to(image_tag("icons/bullhorn.svg"), destroy_user_session_path) %></li>
+					<li><%= link_to(image_tag("icons/Settings.svg"), edit_user_registration_path) %></li>
+					<li><%= link_to(image_tag("icons/Logout.svg"), destroy_user_session_path) %></li>
 					<li class="right"><a href="#"><!-- <img src="icons/Icon_pen.svg" alt=""> --><%= image_tag("icons/Icon_pen.svg")%></a></li>
 					<li class="right input"><input type="text" placeholder="search"></li>
 				</ul>
 			</nav>
-			<div class="top"></div>
+			<%= link_to(root_path) do %><div class="top"></div><% end %>
 		</header>
 		<aside class="user profile">
 			<div class="profile_content">
@@ -63,11 +62,12 @@
 				<div class="feed">
 					<span class="letters">AG</span>
 					<p class="text"><%= happ.text %> </p>
-					<span class="author"><%=happ.user.happername %> |</span><span class="date"> <%= happ.created_at %></span>
+					<span class="author"> <%= link_to(happ.user.happername, show_user_path(happ.user.id)) %>|</span><span class="date"> <%= happ.created_at %></span>
 					<ul>
 						<li><a href="#"><!-- <img src="icons/respond.svg" alt="Answer"> --><%= image_tag("icons/respond.svg")%></a></li>
 						<li><a href="#"><!-- <img src="icons/retweet.svg" alt="RT"> --><%= image_tag("icons/retweet.svg")%></a></li>
 						<li><a href="#"><!-- <img src="icons/like.svg" alt="Like"> --><%= image_tag("icons/like.svg")%></a></li>
+						<% if current_user.id==happ.user.id %><li><%= link_to(image_tag("icons/like.svg"), post_delete_path(happ.id)) %></li><% end %>
 					</ul>
 				</div>
 			<% end %>
@@ -98,10 +98,6 @@
 					<% end %>
 				</ul>
 				</article>
-			
-
-	
-
 	</div>
 
 
