--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -46,7 +46,7 @@
 
 	<section>
 		<div class="post">
-			<p>What's happening?</p>
+			<%= render 'posts/new' %>
 		</div>
 
 		<%	@posts.each do |happ|%>
