--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,29 @@
-<h2>Forgot your password?</h2>
-
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+<div class="container">
+  <div class="top"></div>
+  <section>
+    <h1><%= image_tag("icons/Logo_HAPP.svg")%></h1>
+    <p class="base">Instant short messaging from space and above</p>
+    <div class="wrapper new_password">
+      <div class="bloc">
+        <p>Forgot your password ?</p>
+        
+          <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+  			<%= devise_error_messages! %>
+          <ul>  
+            <li>
+              <%= f.email_field :email, autofocus: true, :placeholder => 'EMAIL' %>
+            </li>
+          </ul>
+          <div class="actions">
+            <%= f.submit "Send me reset password instructions" %>
+          </div>
+          <% end %>
+      </div>
+    </div>
+    <div class="actions new_password">
+    	<ul>
+      <%= render "devise/shared/links" %>
+      	</ul>
+    </div>
+  </section>
+</div>
