--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -58,7 +58,8 @@
 				<%= render 'posts/new' %>
 			</div>
 
-			<% @posts.each do |happ|%>
+			<% @feed_items.each do |happ|%>
+
 				<div class="feed">
 					<span class="letters">AG</span>
 					<p class="text"><%= happ.text %> </p>
