--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -59,7 +59,8 @@
 				<p>What's happening?</p>
 			</div>
 
-			<% @posts.each do |happ|%>
+			<% @feed_items.each do |happ|%>
+
 				<div class="feed">
 					<span class="letters">AG</span>
 					<p class="text"><%= happ.text %> </p>
